--- a/.github/workflows/pr-linting.yaml
+++ b/.github/workflows/pr-linting.yaml
@@ -28,6 +28,7 @@ jobs:
       - name: "Code linting"
         run: |
           pip3 install pylint
+          pip3 install -r requirements.txt
           python3 -m pylint --fail-under=9.5 $(find . -name "*.py")
   docstring-linting:
     name: Docstring Linting
